--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <!-- saved from url=(0043)https://threejs.org/examples/webxr_vr_cubes -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>Apneadr - Santiago Colombo Migliorero</title>
+		<title>Cada vez más la configuración se desdibuja, como el agua que se deshace una y otra vez en los mismos ríos
+ - Santiago Colombo Migliorero</title>
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 		<link type="text/css" rel="stylesheet" href="./assets/main.css">
